Fixing overflowing elements on Safari Mobile
Thanks to Estrella(SYwaves) for figuring this out!

--- a/src/css/wikidot-structure.css
+++ b/src/css/wikidot-structure.css
@@ -124,7 +124,7 @@
 
 #action-area-top {
 	grid-area: action-area-top;
-	width: var(--body-width-on-desktop);
+	width: 100%;
 }
 
 /* ===PAGE-TITLE=== */
@@ -3537,7 +3537,7 @@ div.odialog-shader-iframe {
 	}
 
 	#action-area-top {
-		width: var(--body-width-on-mobile);
+		width: 100%;
 	}
 
 	#page-content {
